# cycles-shader-editor

./: LICENSE.txt  Makefile  README.md
example/: main.cpp
extra/: CMakeLists.txt  iwyu.imp  shader_graph_converter.cpp
nanovg/src/: fontstash.h  nanovg.c  nanovg.h
src/: button_category.cpp  button_category.h  buttons_nodes.cpp  buttons_nodes.h  click_target.cpp  click_target.h  common_enums.h  config.h  curve.cpp  curve.h  drawing.cpp  drawing.h  editable_graph.cpp  editable_graph.h  float_pos.cpp  float_pos.h  glfw_callbacks.cpp  glfw_callbacks.h  glfw_window.cpp  graph_decoder.cpp  graph_decoder.h  graph_editor.cpp  graph_editor.h  gui_colors.h  gui_sizes.h  input_box.cpp  input_box.h  main_window.cpp  main_window.h  node_base.cpp  node_base.h  node_colors.cpp  node_colors.h  node_converter.cpp  node_converter.h  node_inputs.cpp  node_inputs.h  node_interop_max.cpp  node_interop_max.h  node_outputs.cpp  (+86 more)
